--- a/index.html
+++ b/index.html
@@ -21,14 +21,14 @@
             <div class="preloader__bar"></div>
             <div class="preloader__bar"></div>
             <div class="preloader__bar"></div>
-            <!-- <div class="preloader__bar"></div>
             <div class="preloader__bar"></div>
             <div class="preloader__bar"></div>
             <div class="preloader__bar"></div>
             <div class="preloader__bar"></div>
             <div class="preloader__bar"></div>
             <div class="preloader__bar"></div>
-            <div class="preloader__bar"></div> -->
+            <div class="preloader__bar"></div>
+            <div class="preloader__bar"></div>
         </div>
         <div class="wrapper">
             <h1 class="title">Welcome To <span id="word">CopArcadia!</span></h1>
@@ -57,27 +57,30 @@
     <script>
         // Устанавливаем начальные параметры для прелоадера и канваса
         const tloader = gsap.timeline();
+        var preloader = document.querySelector(".preloader");
 
         // Основная анимация для прелоадера
         tloader
             .set('.wrapper', { opacity: 0 }) // Прелоадер также скрыт
             .to('.wrapper', { opacity: 1, duration: 0.5 }) // Плавное появление прелоадера
             .to('.preloader__bar', {
-                yPercent: 0, // Появление полосок прелоадера
+                height: '110vh', // Появление полосок прелоадера
                 duration: 0.5,
                 stagger: 0.2
             })
-            .to('.wrapper', {opacity: 0})
+            .to('.wrapper', { opacity: 0 })
             .to('.preloader__bar', {
-                yPercent: -100, // Убираем полоски прелоадера вверх
-                duration: 0.3,
-                stagger: 0.15,
-                // borderBottomLeftRadius: 100,
-                // borderBottomRightRadius: 100,
+                height: '110vh', // Убираем полоски прелоадера вверх
+                duration: 1,
+                stagger: 0.05,
+                borderBottomLeftRadius: 250,
+                borderBottomRightRadius: 250,
+                opacity: 0
             })
             .call(() => {
                 // После завершения анимации полосок, запускаем появление канваса
                 gsap.to('#unity-container', { opacity: 1, duration: 1.5 });
+                preloader.style.display = 'none'
             });
 
 
@@ -85,8 +88,7 @@
         function startUnityLoading() {
             var container = document.querySelector("#unity-container");
             var canvas = document.querySelector("#unity-canvas");
-            var preloader = document.querySelector(".preloader");
-            container.style.opacity = '0'; // Начальное значение прозрачности контейнера
+            container.style.opacity = '0';
 
             var buildUrl = "Build";
             var loaderUrl = buildUrl + "/BlockBreaker.loader.js";
@@ -118,11 +120,12 @@
             script.onload = () => {
                 createUnityInstance(canvas, config, (progress) => {
                     console.log(`Progress: ${progress * 100}%`);
+                }).then((unityInstance) => {
+                    // Прелоадер скроется после загрузки Unity, как только канвас будет полностью видим
                 }).catch((message) => {
                     alert(message);
                 });
             };
-
             document.body.appendChild(script);
         }
 
